# multiversal-pictures

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent-workflow.md  deep-research-report.md  engineer-with-ai-best-practices.md  high-quality-short-form-workflow.md  short-form-review-checklist.md  topic-research-playbook.md
examples/: engineer_with_ai_1min_shotlist.json  engineer_with_ai_shorts_prompt.txt  engineer_with_ai_shorts_shotlist.json  high_quality_shorts_package_template.md  high_quality_shorts_prompt_template.txt  hybrid_proof_short_shotlist.json  panda_story_prompt.txt  panda_story_shotlist.json
src/multiversal_pictures/: agents.py  anchors.py  cli.py  dotenv.py  files.py  media.py  narration.py  openai_http.py  openai_images.py  openai_responses.py  openai_speech.py  openai_videos.py  output_presets.py  production.py  prompting.py  rendering.py  review.py  shotlist.py  stitching.py  subtitles.py  tts.py  youtube.py
tests/: test_dotenv.py  test_shorts_timing.py
