[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multiversal-pictures"
version = "0.1.0"
description = "Shotlist-driven Python CLI for stable OpenAI video clip generation in Multiversal Pictures."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Yongjip Kim" }
]
dependencies = [
  "imageio-ffmpeg>=0.6.0",
  "google-api-python-client>=2.169.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
]

[project.scripts]
multiversal-pictures = "multiversal_pictures.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
